[hi-IN] update from Pootle (firefox)

--- a/hi-IN/browser/chrome/browser/devtools/gcli.properties
+++ b/hi-IN/browser/chrome/browser/devtools/gcli.properties
@@ -54,6 +54,7 @@ cliOptions=उपलब्ध विकल्प
 cliUnknownCommand=अवैध कमांड
 
 # LOCALIZATION NOTE: A parameter should have a value, but doesn't
+cliIncompleteParam='%1$S' के लिए मान.
 
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that does not exist, but should (e.g. for use with File->Open) %1$S is a
@@ -169,6 +170,7 @@ helpManDefault=वैकल्पिक, डिफ़ॉल्ट=%1$S
 
 # LOCALIZATION NOTE: This forms part of the output from the 'help' command.
 # 'GCLI' is a project name and should be left untranslated.
+helpIntro=GCLI वेब डेवलेपर के लिए उच्चस्तरीय रूप से उपयोगी कमांड लाइन बनाने के लिए है.
 
 # LOCALIZATION NOTE: Text shown as part of the output of the 'help' command
 # when the command in question has sub-commands, before a list of the matching
@@ -177,6 +179,7 @@ subCommands=उप-कमांड
 
 # LOCALIZATION NOTE: This error message is displayed when the command line is
 # cannot find a match for the parse types.
+commandParseError=कमांड लाइन विश्लेषण त्रुटि
 
 # LOCALIZATION NOTE (contextDesc, contextManual, contextPrefixDesc): These
 # strings are used to describe the 'context' command and its 'prefix'
@@ -205,6 +208,8 @@ contextEmptyReply=कमांड उपसर्ग अनसेट है
 connectDesc=सर्वर में प्रॉक्सी कमांड\u0020
 connectManual=सर्वर से कनेक्ट करें, सर्वर पर कमांड का स्थानीय संस्करण बना रहा है. दूरस्थ कमांड के पास आरंभ में उपसर्ग रहता है ताकि उसे स्थानीय कमांड से अलग किया जा सके (लेकिन इससे आगे जाने के लिए संदर्भ कमांड देखें)\u0020
 connectPrefixDesc=आयातित कमांड के लिए जनक उपसर्ग
+connectMethodDesc=कनेक्ट करने की विधि
+connectUrlDesc=URL जिससे कनेक्ट करना है
 connectDupReply=%S नामक कनेक्शन पहले से मौजूद है.
 
 # LOCALIZATION NOTE: The output of the 'connect' command, telling the user
@@ -227,8 +232,12 @@ disconnectReply=%S कमांड हटाया गया.
 
 # LOCALIZATION NOTE (globalDesc, globalWindowDesc, globalOutput): These
 # strings describe the 'global' command and its parameters
+globalDesc=JS ग्लोबल बदलें
+globalWindowDesc=नया विंडो/वैश्विक
+globalOutput=JS वैश्विक अब %S है
 
 # LOCALIZATION NOTE: These strings describe the 'clear' command
+clearDesc=आउटपुट क्षेत्र साफ़ करें
 
 # LOCALIZATION NOTE (langDesc, langOutput): These strings describe the 'lang'
 # command and its parameters
@@ -293,6 +302,7 @@ introManual=संदेश फिर दिखाएँ जो नए उपय
 # introTextF1Escape, introTextGo): These strings are displayed when the user
 # first opens the developer toolbar to explain the command line, and is shown
 # each time it is opened until the user clicks the 'Got it!' button.
+introTextOpening3=GCLI वेब डेवलेपर के लिए उच्चस्तरीय रूप से उपयोगी कमांड लाइन बनाने के लिए है.
 introTextCommands=कमांड के प्रकारों की सूची के लिए
 introTextKeys2=,कमांड हिंट दिखाने/छिपाने के लिए दबाएँ
 introTextF1Escape=F1/Escape
