--- a/hi-IN/browser/chrome/browser/devtools/inspector.properties
+++ b/hi-IN/browser/chrome/browser/devtools/inspector.properties
@@ -39,6 +39,8 @@ inspector.accesskey=I
 
 # LOCALIZATION NOTE (inspector.panelLabel.*)
 # Labels applied to the panel and views within the panel in the toolbox
+inspector.panelLabel=निरीक्षक पटल
+inspector.panelLabel.markupView=मार्कअप दृश्य
 
 # LOCALIZATION NOTE (markupView.more.*)
 # When there are too many nodes to load at once, we will offer to
@@ -51,3 +53,4 @@ inspector.tooltip=डोम और शैली निरीक्षक
 previewTooltip.image.brokenImage=छवि लोड नहीं कर सका.
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+eventsTooltip.openInDebugger=डिबगर में खोलें
