--- a/hi-IN/browser/chrome/browser/devtools/webaudioeditor.properties
+++ b/hi-IN/browser/chrome/browser/devtools/webaudioeditor.properties
@@ -23,6 +23,7 @@ ToolboxWebAudioEditor1.panelLabel=वेब ऑडियो पटल
 # LOCALIZATION NOTE (ToolboxWebAudioEditor1.tooltip):
 # This string is displayed in the tooltip of the tab when the Web Audio Editor is
 # displayed inside the developer tools window.
+ToolboxWebAudioEditor1.tooltip=वेब ऑडियो संदर्भ विजुअलाइजर और ऑडियो नोड निरीक्षक
 
 # LOCALIZATION NOTE (collapseInspector): This is the tooltip for the button
 # that collapses the inspector in the web audio tool UI.
