--- a/hi-IN/browser/chrome/browser/loop/loop.properties
+++ b/hi-IN/browser/chrome/browser/loop/loop.properties
@@ -4,15 +4,36 @@
 
 # Panel Strings
 
+share_link_header_text=बात करने के लिए कुछ का आमंत्रित करने के लिए इस कड़ी का साझा करें:
 
 # Status text
+display_name_dnd_status=परेशान नहीं करें
+display_name_available_status=उपलब्ध
 
+unable_retrieve_url=माफ करें, हम कॉल यूआएल पाने में असमर्थ हैं.
 
 # Conversation Window Strings
 
+incoming_call_title=इनकमिंग काल…
+incoming_call=इनकमिंग काल
+incoming_call_answer_button=जवाब
+incoming_call_decline_button=रद्द करें
+incoming_call_ignore_button=नज़रअंदाज़ करें
 incoming_call_block_button=रोकें
+hangup_button_title=हैंगअप
+mute_local_audio_button_title=ऑडियो मौन करें
+unmute_local_audio_button_title=ऑडियो ट्रैक्स अनम्यूट करें
+mute_local_video_button_title=वीडियो मौन करें
+unmute_local_video_button_title=वीडियो ट्रैक्स अनम्यूट करें
 
+peer_ended_conversation=आपके पीयर ने कॉल समाप्त कर दिया.
+call_has_ended=आपका कॉल समाप्त.
+close_window=इस विंडो को बन्द करें
 
+cannot_start_call_session_not_ready=कॉल आरंभ नहीं कर सकता है, सत्र तैयार नहीं है.
+network_disconnected=संजाल कनेक्शन अचानक समाप्त.
 
+connection_error_see_console_notification=कॉल विफल; विवरण के लिए कंसोल देखें.
 ## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
 ## part between {{..}}
+legal_text_and_links=By using this product you agree to the <a target="_blank" href="{{terms_of_use_url}}">Terms of Use</a> and <a href="{{privacy_notice_url}}">Privacy Notice</a>.
