--- a/hi-IN/browser/chrome/browser/newTab.properties
+++ b/hi-IN/browser/chrome/browser/newTab.properties
@@ -7,3 +7,4 @@ newtab.unpin=इस साइट को अनपिन करें
 newtab.block=यह साइट हटाएँ
 newtab.show=नया टैब पृष्ठ दिखाएँ
 newtab.hide=नया टैब पृष्ठ छिपाएँ
+newtab.sponsored=प्रायोजित टाइल पर जानकारी दिखाएँ
