--- a/hi-IN/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/hi-IN/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -22,9 +22,11 @@ ToolboxCanvasDebugger.panelLabel=कैनवास पटल
 # LOCALIZATION NOTE (ToolboxCanvasDebugger.tooltip):
 # This string is displayed in the tooltip of the tab when the Shader Editor is
 # displayed inside the developer tools window.
+ToolboxCanvasDebugger.tooltip=<canvas> संदर्भ के निरीक्षण और डिबग के लिए औज़ार
 
 # LOCALIZATION NOTE (noSnapshotsText): The text to display in the snapshots menu
 # when there are no recorded snapshots yet.
+noSnapshotsText=अबतक कोई स्नैपशॉट नहीं है.
 
 # LOCALIZATION NOTE (snapshotsList.itemLabel):
 # This string is displayed in the snapshots list of the Canvas Debugger,
@@ -53,6 +55,7 @@ snapshotsList.loadedLabel=डिस्क से लोड
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogTitle):
 # This string is displayed as a title for saving a snapshot to disk.
+snapshotsList.saveDialogTitle=चल-छवि फ्रेम स्नैपशॉट सहेजें…
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a snapshot to disk.
