--- a/hi-IN/browser/chrome/browser/devtools/projecteditor.properties
+++ b/hi-IN/browser/chrome/browser/devtools/projecteditor.properties
@@ -14,22 +14,27 @@
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
 # file / folder to be deleted.
+projecteditor.deleteLabel=मिटाएँ
 
 # LOCALIZATION NOTE (projecteditor.deletePromptTitle):
 # This string is displayed as as the title of the confirm prompt that checks
 # to make sure if a file or folder should be removed.
+projecteditor.deletePromptTitle=मिटाएँ
 
 # LOCALIZATION NOTE (projecteditor.deleteFolderPromptMessage):
 # This string is displayed as as the message of the confirm prompt that checks
 # to make sure if a folder should be removed.
+projecteditor.deleteFolderPromptMessage=क्या आप इस फ़ोल्डर को मिटाने के लिए निश्चित हैं?
 
 # LOCALIZATION NOTE (projecteditor.deleteFilePromptMessage):
 # This string is displayed as as the message of the confirm prompt that checks
 # to make sure if a file should be removed.
+projecteditor.deleteFilePromptMessage=क्या आप इस फ़ाइल को मिटाने के लिए निश्चित हैं?
 
 # LOCALIZATION NOTE (projecteditor.newLabel):
 # This string is displayed as a menu item for adding a new file to
 # the directory.
+projecteditor.newLabel=नया...
 
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
@@ -42,21 +47,27 @@ projecteditor.saveAsLabel=ऐसे सहेजें…
 
 # LOCALIZATION NOTE (projecteditor.selectFileLabel):
 # This string is displayed as the title on the file picker when saving a file.
+projecteditor.selectFileLabel=एक फ़ाइल चुनें
 
 # LOCALIZATION NOTE (projecteditor.openFolderLabel):
 # This string is displayed as the title on the file picker when opening a folder.
+projecteditor.openFolderLabel=एक फोल्डर चुनें
 
 # LOCALIZATION NOTE (projecteditor.openFileLabel):
 # This string is displayed as the title on the file picker when opening a file.
+projecteditor.openFileLabel=फ़ाइल खोलें
 
 # LOCALIZATION NOTE  (projecteditor.find.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to search
 # text in the files.
+projecteditor.find.commandkey=F
 
 # LOCALIZATION NOTE  (projecteditor.save.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to
 # save the file.  It is used with accel+shift to "save as".
+projecteditor.save.commandkey=S
 
 # LOCALIZATION NOTE  (projecteditor.new.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to
 # create a new file.
+projecteditor.new.commandkey=N
