--- a/hi-IN/browser/chrome/browser/devtools/shadereditor.properties
+++ b/hi-IN/browser/chrome/browser/devtools/shadereditor.properties
@@ -17,6 +17,7 @@ ToolboxShaderEditor.label=शेडर संपादक
 
 # LOCALIZATION NOTE (ToolboxShaderEditor.panelLabel):
 # This is used as the label for the toolbox panel.
+ToolboxShaderEditor.panelLabel=शेडर संपादक पटल
 
 # LOCALIZATION NOTE (ToolboxShaderEditor.tooltip):
 # This string is displayed in the tooltip of the tab when the Shader Editor is
