--- a/hi-IN/browser/chrome/browser/devtools/toolbox.properties
+++ b/hi-IN/browser/chrome/browser/devtools/toolbox.properties
@@ -33,9 +33,11 @@ toolbox.titleTemplate=%1$S - %2$S
 
 # LOCALIZATION NOTE (toolbox.defaultTitle): This is used as the tool
 # name when no tool is selected.
+toolbox.defaultTitle=डेवलेपर औज़ार
 
 # LOCALIZATION NOTE (toolbox.label): This is used as the label for the
 # toolbox as a whole
+toolbox.label=डेवलेपर औज़ार
 
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the options panel tab.
@@ -43,6 +45,7 @@ optionsButton.tooltip=औज़ारपेटी विकल्प
 
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
+options.panelLabel=औज़ारपेटी विकल्प पटल
 
 # LOCALIZATION NOTE (options.toolNotSupported): This is the template
 # used to add a * marker to the label for the Options Panel tool checkbox for the
@@ -62,3 +65,4 @@ browserConsoleCmd.commandkey=j
 
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
+pickButton.tooltip=पृष्ठ से एक तत्व चुनें
