--- a/hi-IN/browser/chrome/browser/syncSetup.properties
+++ b/hi-IN/browser/chrome/browser/syncSetup.properties
@@ -35,6 +35,7 @@ passwordsCount.label        = #1 कूटशब्द;#1 कूटशब्द
 # LOCALIZATION NOTE (addonsCount.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of add-ons, see the link above for forms
+addonsCount.label        = #1 सहयुक्ति;#1 सहयुक्ति
 
 save.recoverykey.title = पुनर्पाप्ति कुँजी सहेजें
 save.recoverykey.defaultfilename = फ़ायरफ़ॉक्स पुनर्प्राप्ति Key.html
@@ -55,9 +56,11 @@ disconnect.verify.title = डिस्कनेक्ट करें
 disconnect.verify.heading = क्या आप निश्चित हैं?
 # LOCALIZATION NOTE (disconnect.verify.description): %S will be replaced with
 # brandShortName
+disconnect.verify.description = %S will stop syncing with your account, but won’t delete any of your browsing data on this computer.
 
 relinkVerify.title = चेतावनी मिलाएं
 relinkVerify.heading = क्या आप निश्चित हैं कि आप सिंक करने के लिए हस्ताक्षर करने चाहते हैं?
 # LOCALIZATION NOTE (relinkVerify.description): Email address of a user previously signed into sync.
+relinkVerify.description = A different user was previously signed in to Sync on this computer. Signing in will merge this browser’s bookmarks, passwords and other settings with %S
 
 manage.pageTitle = सिंक प्रबंधित करें
