--- a/hi-IN/browser/chrome/browser/webrtcIndicator.properties
+++ b/hi-IN/browser/chrome/browser/webrtcIndicator.properties
@@ -7,7 +7,13 @@
 # LOCALIZATION NOTE (webrtcIndicator.windowtitle): %S is the brand name (e.g. Firefox).
 # This string is used so that the window has a title in tools that enumerate/look for window
 # titles. It is not normally visible anywhere.
+webrtcIndicator.windowtitle = %S - साझा सूचकांक
 
+webrtcIndicator.sharingCameraAndMicrophone.tooltip = आपका कैमरा और माइक्रोफ़ोन साझा किया जाता है. साझा नियंत्रण के लिए क्लिक करें.
+webrtcIndicator.sharingCamera.tooltip              = आपका कैमरा साझा किया जाता है. साझा नियंत्रण के लिए क्लिक करें.
+webrtcIndicator.sharingMicrophone.tooltip          = आपका माइक्रोफ़ोन साझा किया जाता है. साझा नियंत्रण के लिए क्लिक करें.
+webrtcIndicator.sharingScreen.tooltip = आपका स्क्रीन साझा किया जाता है. साझा नियंत्रण के लिए क्लिक करें.
+webrtcIndicator.sharingWindow.tooltip = आपका विंडो साझा किया जाता है. साझा नियंत्रण के लिए क्लिक करें.
 
 
 # LOCALIZATION NOTE : The following strings are only used on Mac for
@@ -15,7 +21,17 @@
 
 # LOCALIZATION NOTE (webrtcIndicator.sharing*With.menuitem):
 # %S is the title of the tab using the share.
+webrtcIndicator.sharingCameraWith.menuitem = "%S" के साथ कैमरा साझा करें
+webrtcIndicator.sharingMicrophoneWith.menuitem = "%S" के साथ माइक्रोफ़ोन साझा करें
+webrtcIndicator.sharingScreenWith.menuitem = "%S" के साथ स्क्रीन साझा करें
+webrtcIndicator.sharingWindowWith.menuitem = "%S" के साथ विंडो साझा करें
+webrtcIndicator.controlSharing.menuitem = साझा नियंत्रण
 # LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
 # Semicolon-separated list of plural forms.
+webrtcIndicator.sharingCameraWithNTabs.menuitem = #1 टैब के साथ कैमरा साझा करना;#1 टैब के साथ कैमरा साझा करना
+webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = #1 टैब के साथ माइक्रोफ़ोन साझा करना;#1 टैब के साथ माइक्रोफ़ोन साझा करना
+webrtcIndicator.sharingScreenWithNTabs.menuitem = #1 टैब के साथ स्क्रीन साझा करना;#1 टैब के साथ स्क्रीन साझा करना
+webrtcIndicator.sharingWindowWithNTabs.menuitem = #1 टैब के साथ विंडो साझा करना;#1 टैब के साथ विंडो साझा करना
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
+webrtcIndicator.controlSharingOn.menuitem = "%S" पर साझा नियंत्रण
