--- a/hi-IN/browser/installer/nsisstrings.properties
+++ b/hi-IN/browser/installer/nsisstrings.properties
@@ -47,12 +47,15 @@ ADD_CheckboxShortcutOnDesktop=मेरे डेस्कटॉप पर ( &D)
 SPACE_REQUIRED=स्थान जरूरी:
 SPACE_AVAILABLE=स्थान उपलब्ध:
 ONE_MOMENT_INSTALL=कुछ क्षण रूकें, $BrandShortName संस्थापन पूरा होने के बाद तुरत लॉन्च होगा…
+ONE_MOMENT_UPGRADE=कुछ क्षण रूकें, $BrandShortName उन्नयन पूरा होने के बाद तुरत लॉन्च होगा…
 INSTALL_MAINT_SERVICE=$BrandShortName पृष्ठभूमि अद्यतन सेवा संस्थापित करें (&I)
 SEND_PING=इस स्थापना के बारे में मोज़िल्ला को जानकारी भेजे (&e)
 BROWSE_BUTTON=ब्राउज़ करें (&r)…
 DEST_FOLDER=गंतव्य फ़ोल्डर
 
+DOWNLOADING_LABEL=$BrandShortName डाउनलोड कर रहा है...
 INSTALLING_LABEL=Installing $BrandShortName…
+UPGRADING_LABEL=$BrandShortName उन्नत कर रहा है…
 
 SELECT_FOLDER_TEXT=इसमें $BrandShortName संस्थापित करने के लिए फ़ोल्डर चुनें.
 
