--- a/hy-AM/browser/chrome/browser/loop/loop.properties
+++ b/hy-AM/browser/chrome/browser/loop/loop.properties
@@ -16,3 +16,5 @@ incoming_call_block_button=Արգելել
 
 ## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
 ## part between {{..}}
+  target="_blank" href="{{terms_of_use_url}}">Terms of Use</a> and <a \
+  href="{{privacy_notice_url}}">Privacy Notice</a>.
