[ta] update from Pootle (thunderbird)

--- a/ta/chat/irc.properties
+++ b/ta/chat/irc.properties
@@ -6,24 +6,34 @@
 #  This is displayed inside the accountUsernameInfoWithDescription
 #  string defined in imAccounts.properties when the user is
 #  configuring an IRC account.
+irc.usernameHint=புனை
 
 # LOCALIZATION NOTE (connection.error.*):
 #   These will show in the account manager if the account is
 #   disconnected because of an error.
+connection.error.lost=சேவையகத்துடன் இணைப்பில் இல்லை
+connection.error.timeOut=இணைப்பு காலாவதியானது
+connection.error.invalidPassword=தவறான சேவையக கடவுச்சொல்
+connection.error.passwordRequired=கடவுச்சொல் தேவை
 
 # LOCALIZATION NOTE (joinChat.*):
 #   These show up on the join chat menu. An underscore is for the access key.
+joinChat.channel=_தடம்
 
 # LOCALIZATION NOTE (options.*):
 #   These are the protocol specific options shown in the account manager and
 #   account wizard windows.
+options.showServerTab=சேவையக செய்திகளை காட்டு
+options.alternateNicks=மாற்று புனைபெயர்கள்
 
 # LOCALIZATION NOTE (ctcp.version):
 #   %1$S is the nickname of the user whose version was requested.
 #   %2$S is the version response from the client.
+ctcp.version=%1$S "%2$S" பயன்படுத்துகிறார்.
 # LOCALIZATION NOTE (ctcp.time):
 #   %1$S is the nickname of the user whose time was requested.
 #   %2$S is the time response.
+ctcp.time=%1$S இன் நேரம் %2$S.
 
 # LOCALZIATION NOTE (command.*):
 #   These are the help messages for each command, the %S is the command name
@@ -85,6 +95,7 @@
 #    reverse DNS of the user's IP, but often mangled by the server to
 #    protect users).
 # The away message of the user
+tooltip.away=வெளியில்
 # %S is the timespan elapsed since the last activity.
 
 #    %1$S is the server name, %2$S is some generic server information (usually a
