--- a/ta/mail/chrome/messenger/messenger.properties
+++ b/ta/mail/chrome/messenger/messenger.properties
@@ -93,6 +93,7 @@ documentDone=
 # for the has attachment picker in search and mail views
 
 # for the Tag picker in search and mail views.
+tag=குறிகள்
 
 # mailnews.js
 
