--- a/ta/mail/chrome/messenger/search-attributes.properties
+++ b/ta/mail/chrome/messenger/search-attributes.properties
@@ -4,5 +4,6 @@
 
 #these need to match nsMsgSearchAttrib interface in nsMsgSearchCore.idl
 #and nsMsgSearchAttribMap in nsMsgSearchAdapter.cpp
+Tags=குறிகள்
 # for AB and LDAP
 # more mailnews
