--- a/ta/chat/commands.properties
+++ b/ta/chat/commands.properties
@@ -8,11 +8,18 @@ commands=கட்டளைகள்: %S.\nமேலதிக தகவல்க
 # LOCALIZATION NOTE (noCommand, noHelp):
 #  %S is the command name the user typed.
 noCommand='%S' என்ற கட்டளை எதுவும் இல்லை.
+noHelp='%S' கட்டளைக்கான உதவிக் குறிப்புகள் ஏதும் இல்லை. மன்னிக்கவும்!
 
 sayHelpString=செய்தி&lt;: கட்டளையாக செயல்படுத்தாமல் வெறும் உரையாக அனுப்புக
+rawHelpString=raw &lt;message&gt;: HTML குறிச்சொற்களை அப்படியே உரையாக அனுப்புக.
 
 # LOCALIZATION NOTE (statusCommand):
 #  %1$S is replaced with a status command name
 #   (one of "back", "away", "busy", "dnd", or "offline").
 #  %2$S is replaced with the localized version of that status type
 #   (one of the 5 strings below).
+back=இணைப்பில்
+away=அருகிலில்லை
+busy=இணைப்பிலில்லை
+dnd=கிடைக்கப்பெறாத
+offline=இணைப்பு விலகி
