--- a/ta/chat/status.properties
+++ b/ta/chat/status.properties
@@ -2,6 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+availableStatusType=இருக்கிறார்
+awayStatusType=வெளியில்
+unavailableStatusType=இருப்பில் இல்லை
+offlineStatusType=இணைப்பில்லை
 # LOCALIZATION NOTE (unknownStatusType):
 # the status of a buddy is unknown when it's in the list of a disconnected account
 
@@ -11,3 +15,4 @@
 
 # LOCALIZATION NOTE (messenger.status.defaultIdleAwayMessage):
 #  This will be the away message put automatically when the user is idle.
+messenger.status.defaultIdleAwayMessage=கணினியில் இல்லை.
