fix mistranslation of FoundMatches

--- a/ja/toolkit/chrome/global/findbar.properties
+++ b/ja/toolkit/chrome/global/findbar.properties
@@ -13,7 +13,7 @@ CaseSensitive		= (大文字/小文字を区別する)
 # LOCALIZATION NOTE (FoundMatches): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is currently selected match and #2 the total amount of matches.
-FoundMatches		= #2 件中 #1 件見つかりました
+FoundMatches		= #2 件中 #1 件目
 # LOCALIZATION NOTE (FoundMatchesCountLimit): Semicolon-separated list of plural
 # forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
