Bug 1030470 - (part 1) moved the non-android localization part out of AccessFu to be handled in Gaia - translated shortened role names for braille

--- a/pl/dom/chrome/accessibility/AccessFu.properties
+++ b/pl/dom/chrome/accessibility/AccessFu.properties
@@ -168,74 +168,73 @@ quicknav_Separator   =Separatory
 quicknav_Table       =Tabele
 quicknav_Checkbox    =Przyciski zaznaczenia
 
-# Shortened role names for braille
-menubarAbbr=menu bar
-scrollbarAbbr      =       scroll bar
-gripAbbr           =       grip
-alertAbbr          =       alert
-menupopupAbbr      =       menu popup
-documentAbbr       =       document
-paneAbbr           =       pane
-dialogAbbr         =       dialog
-separatorAbbr      =       separator
-toolbarAbbr        =       toolbar
-statusbarAbbr      =       status bar
-tableAbbr          =       tbl
-columnheaderAbbr   =       column header
-rowheaderAbbr      =       row header
-columnAbbr         =       column
-rowAbbr            =       row
-cellAbbr           =       cell
-linkAbbr           =       lnk
-listAbbr           =       list
-listitemAbbr       =       list item
-outlineAbbr        =       outline
-outlineitemAbbr    =       outline item
-pagetabAbbr        =       tab
-propertypageAbbr   =       property page
-graphicAbbr        =       graphic
-pushbuttonAbbr     =       btn
-checkbuttonAbbr    =       check button
-radiobuttonAbbr    =       radio button
-comboboxAbbr       =       combo box
-progressbarAbbr    =       progress bar
-sliderAbbr         =       slider
-spinbuttonAbbr     =       spin button
-diagramAbbr        =       diagram
-animationAbbr      =       animation
-equationAbbr       =       equation
-buttonmenuAbbr     =       button menu
-whitespaceAbbr     =       white space
-pagetablistAbbr    =       tab list
-canvasAbbr         =       canvas
-checkmenuitemAbbr  =       check menu item
-labelAbbr          =       label
-passwordtextAbbr   =       passwdtxt
-radiomenuitemAbbr  =       radio menu item
-textcontainerAbbr  =       text container
-togglebuttonAbbr   =       toggle button
-treetableAbbr      =       tree table
-headerAbbr         =       header
-footerAbbr         =       footer
-paragraphAbbr      =       paragraph
-entryAbbr          =       entry
-captionAbbr        =       caption
-headingAbbr        =       heading
-sectionAbbr        =       section
-formAbbr           =       form
-comboboxlistAbbr   =       combo box list
-comboboxoptionAbbr =       combo box option
-imagemapAbbr       =       imgmap
-listboxoptionAbbr  =       option
-listboxAbbr        =       list box
-flatequationAbbr   =       flat equation
-gridcellAbbr       =       gridcell
-noteAbbr           =       note
-figureAbbr         =       fig
-definitionlistAbbr =       definition list
-termAbbr           =       term
-definitionAbbr     =       definition
-textareaAbbr       =       txtarea
+menubarAbbr=pas menu
+scrollbarAbbr=pas przewijania
+gripAbbr=uchwyt
+alertAbbr=ostrzeż
+menupopupAbbr=menu
+documentAbbr=dokument
+paneAbbr=panel
+dialogAbbr=okno dialogowe
+separatorAbbr=separator
+toolbarAbbr=pas narzędzi
+statusbarAbbr=pas stanu
+tableAbbr=tabela
+columnheaderAbbr=nagłówek kolumny
+rowheaderAbbr=nagłówek wiersza
+columnAbbr=kolumna
+rowAbbr=wiersz
+cellAbbr=komórka
+linkAbbr=odnośnik
+listAbbr=lista
+listitemAbbr=element listy
+outlineAbbr=konspekt
+outlineitemAbbr=element konspektu
+pagetabAbbr=karta
+propertypageAbbr=strona własności
+graphicAbbr=grafika
+pushbuttonAbbr=przycisk
+checkbuttonAbbr=przycisk zaznaczenia
+radiobuttonAbbr=przycisk radio
+comboboxAbbr=pole combo
+progressbarAbbr=pas postępu
+sliderAbbr=suwak
+spinbuttonAbbr=przycisk obrotowy
+diagramAbbr=diagram
+animationAbbr=animacja
+equationAbbr=równanie
+buttonmenuAbbr=menu przycisku
+whitespaceAbbr=biały znak
+pagetablistAbbr=lista kart
+canvasAbbr=płótno
+checkmenuitemAbbr=element z zaznaczeniem
+labelAbbr=etykieta
+passwordtextAbbr=hasło
+radiomenuitemAbbr=element radio
+textcontainerAbbr=kontener tekstu
+togglebuttonAbbr=przycisk przełączania
+treetableAbbr=tabela drzewa
+headerAbbr=nagłówek
+footerAbbr=stopka
+paragraphAbbr=akapit
+entryAbbr=wpis
+captionAbbr=podpis
+headingAbbr=tytuł
+sectionAbbr=sekcja
+formAbbr=formularz
+comboboxlistAbbr=lista combo
+comboboxoptionAbbr=opcja combo
+imagemapAbbr=mapa obrazu
+listboxoptionAbbr=opcja
+listboxAbbr=pole listy
+flatequationAbbr=płaskie równanie
+gridcellAbbr=komórka siatki
+noteAbbr=notatka
+figureAbbr=rys
+definitionlistAbbr=lista definicyjna
+termAbbr=termin
+definitionAbbr=definicja
+textareaAbbr=pole tekstowe
 
 tblColumnInfoAbbr=#1c;#1c;#1c
 tblRowInfoAbbr=#1r;#1r;#1r
