Corrections for dom, and toolkit

--- a/da/dom/chrome/accessibility/AccessFu.properties
+++ b/da/dom/chrome/accessibility/AccessFu.properties
@@ -8,7 +8,7 @@ screenReaderStopped = Skærmlæser stoppet
 
 # Roles
 menubar        =       menulinje
-scrollbar      =       rullebjælke
+scrollbar      =       rullepanel
 grip           =       greb
 alert          =       besked
 menupopup      =       pop op-menu
@@ -186,7 +186,7 @@ quicknav_Checkbox    = Afkrydsningsfelter
 
 # Shortened role names for braille
 menubarAbbr        =       menulinje
-scrollbarAbbr      =       rullebjælke
+scrollbarAbbr      =       rullepanel
 gripAbbr           =       greb
 alertAbbr          =       besked
 menupopupAbbr      =       pop op-menu
@@ -196,13 +196,13 @@ dialogAbbr         =       dialog
 separatorAbbr      =       separator
 toolbarAbbr        =       værktøjslinje
 statusbarAbbr      =       statuslinje
-tableAbbr          =       tabel
+tableAbbr          =       tbl
 columnheaderAbbr   =      kolonneoverskrift
 rowheaderAbbr      =       rækkeoverskrift
 columnAbbr         =       kolonne
 rowAbbr            =       række
 cellAbbr           =       celle
-linkAbbr           =       link
+linkAbbr           =       lnk
 listAbbr           =       liste
 listitemAbbr       =       listepunkt
 outlineAbbr        =       oversigt
@@ -210,7 +210,7 @@ outlineitemAbbr    =       oversigtspunkt
 pagetabAbbr        =       faneblad
 propertypageAbbr   =       egenskabsside
 graphicAbbr        =       grafik
-pushbuttonAbbr     =       knap
+pushbuttonAbbr     =       btn
 checkbuttonAbbr    =       afkrydsningsfelt
 radiobuttonAbbr    =       alternativknap
 comboboxAbbr       =       kombinationsboks
@@ -226,7 +226,7 @@ pagetablistAbbr    =       fanebladsliste
 canvasAbbr         =       lærred
 checkmenuitemAbbr  =       afkrydsningsmenupunkt
 labelAbbr          =       etiket
-passwordtextAbbr   =       adgangskodetekst
+passwordtextAbbr   =       passwdtxt
 radiomenuitemAbbr  =       valgmulighedsmenupunkt
 textcontainerAbbr  =       tekstboks
 togglebuttonAbbr   =       skifteknap
@@ -241,17 +241,17 @@ sectionAbbr        =       sektion
 formAbbr           =       formular
 comboboxlistAbbr   =       liste til kombinationsboks
 comboboxoptionAbbr =       valgmulighed i kombinationsboks
-imagemapAbbr       =       billedkort
+imagemapAbbr       =       imgmap
 listboxoptionAbbr  =       punkt i valgmulighedsliste
 listboxAbbr        =       valgmulighedsliste
 flatequationAbbr   =       flad ligning
 gridcellAbbr       =       celle i tern
 noteAbbr           =       note
-figureAbbr         =       figur
+figureAbbr         =       fig
 definitionlistAbbr =       definitionsliste
 termAbbr           =       term
 definitionAbbr     =       definition
-textareaAbbr       =       tekstfelt
+textareaAbbr       =       txtarea
 
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
 # Number of columns within the table.
