Changes in browser

--- a/es-CL/browser/chrome/browser/devtools/webide.properties
+++ b/es-CL/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header=Ingresar URL del Manifest
 notification_showTroubleShooting_label=solución de errores
 notification_showTroubleShooting_accesskey=t
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Cargando…
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=No se puede instalar el proyecto. No se esta completamente conectado.
