--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -6,7 +6,12 @@
 
 share_link_header_text=Comparte este enlace para invitar a alguien a charlar:
 
+invitee_name_label=¿A quién está invitando?
+invitee_expire_days_label=La invitación expirará en {{expiry_time}} día;La invitación expirará en {{expiry_time}} días
+invitee_expire_hours_label=La invitación expirará en {{expiry_time}} hora;La invitación expirará en {{expiry_time}} horas
+
 # Status text
+display_name_guest=Invitado
 display_name_dnd_status=No molestar
 display_name_available_status=Disponible
 
