Correction for mobile

--- a/da/mobile/android/chrome/aboutHome.properties
+++ b/da/mobile/android/chrome/aboutHome.properties
@@ -2,4 +2,4 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-banner.firstrunHomepage.text=Velkommen til din startside! Kom her, hver gang du åbner et nyt faneblad.
+banner.firstrunHomepage.text=Velkommen til din startside! Siden vises, hver gang du åbner et nyt faneblad.
