[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/devtools/toolbox.properties
+++ b/ta/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=உருவாக்குநர் கருவிகள்
 # for the options panel tab.
 optionsButton.tooltip=கருவிப்பெட்டி தேர்வுகள்
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=விருப்பங்கள்
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=கருவிப்பெட்டி தேர்வுப் பலகம்
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=பக்கத்திலிருந்து ஒரு உறுப்பை எடு
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=கருமையான தீம்
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=பிரகாசமான தீம்
