--- a/ta/webapprt/webapprt/webapp.properties
+++ b/ta/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=%S ஐ நிறுவு
 webapps.install.description=%S ஐ நிறுவ வேண்டுமா?
 webapps.install.install=பயன்பாட்டை நிறுவு
 webapps.install.dontinstall=நிறுவ வேண்டாம்
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=கட்டணம்
 paymentDialog.message=எந்த கட்டணம் செலுத்துபவரை நீங்கள் பயன்படுத்த விரும்புகிறீர்கள்?
