--- a/ta/browser/chrome/browser/newTab.properties
+++ b/ta/browser/chrome/browser/newTab.properties
@@ -5,6 +5,20 @@
 newtab.pin=இந்த தளத்தை அதன் தற்போதைய இடநிலையில் பொருத்து
 newtab.unpin=இந்த தளத்தை விடுவி
 newtab.block=இந்த தளத்தை நீக்கு
-newtab.show=புதிய தாவலுக்கான பக்கத்தை காட்டு
-newtab.hide=புதிய தாவல் பக்கத்தை மறைக்கவும்
-newtab.sponsored=ஆதரவாளர்களின் ஓடுகளில் தகவலைக் காட்டு
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.learn.link=மேலும் அறிக...
+newtab.privacy.link=தனியுரிம கொள்கை
