--- a/ta/dom/chrome/security/csp.properties
+++ b/ta/dom/chrome/security/csp.properties
@@ -65,6 +65,8 @@ scriptFromStringBlocked = ஒரு சரத்திலிருந்து (
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = %1$S ஐ புரவலன் பெயராக எடுத்துக்கொள்ளப்படும் முக்கிய சொல்லாக அல்ல. முக்கிய சொல் வேண்டும் எனில் '%2$S' ஐ பயன்படுத்தவும் (மேற்கோள் குறிகளுக்கிடையில் உள்ளதுபோல்).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
 
 # CSP Errors:
 policyURINotAlone = policy-uri அறிவுறுத்தல் தனியாக மட்டுமே இடம்பெறலாம்
