[S] devtools: Bug 1009604 - Show runtime tabs in WebIDE

--- a/it/browser/chrome/browser/devtools/webide.properties
+++ b/it/browser/chrome/browser/devtools/webide.properties
@@ -12,6 +12,7 @@ importHostedApp_title = Apertura app locale
 importHostedApp_header = Inserire URL del manifesto
 notification_showTroubleShooting_label = risoluzione dei problemi
 notification_showTroubleShooting_accesskey = r
+project_tab_loading = Caricamento…
 error_cantInstallNotFullyConnected = Impossibile installare il progetto. Connessione non completata.
 error_cantInstallValidationErrors = Impossibile installare il progetto. Sono presenti errori di validazione.
 error_listRunningApps = Impossibile ottenere l’elenco delle app dal dispositivo
