Added Carlos Riveros contribution

--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -67,8 +67,6 @@ edit_contact_done_button=Hecho
 audio_call_menu_button=Conversación de audio
 video_call_menu_button=Conversación de video
 
----Pegar aporte de Vedran Tomicic aquí----
-
 # Conversation Window Strings
 initiate_call_button_label2=¿Listo para comenzar su conversación?
 incoming_call_title2=Solicitud de conversación
@@ -83,18 +81,36 @@ mute_local_audio_button_title=Silenciar su audio
 unmute_local_audio_button_title=Desilenciar su audio
 mute_local_video_button_title=Ocultar su video
 unmute_local_video_button_title=Desocultar su video
+call_with_contact_title=Conversación con {{contactName}}
 
+# Outgoing conversation
+outgoing_call_title=¿Iniciar conversación?
+initiate_audio_video_call_button2=Iniciar
+initiate_audio_video_call_tooltip2=Iniciar una conversación con video
+initiate_audio_call_button2=Conversación de voz
+initiate_call_cancel_button=Cancelar
+call_progress_connecting_description=Conectando…
+call_progress_ringing_description=Sonando…
 peer_ended_conversation2=La persona a la que llamaba terminó la conversación.
 call_has_ended= Su llamada ha terminado.
-
+restart_call=Volver a unirse
+generic_failure_title=Algo se fue a las pailas.
+generic_failure_with_reason2=Puede volver a intentarlo o enviar un enlace para probar más tarde.
+generic_failure_no_reason2=¿Le gustaría volver a intentarlo?
+contact_offline_title=Esta persona no está en línea
+call_timeout_notification_text=Su llamada no llegó.
+retry_call_button=Reintentar
+email_link_button=Enviar enlace
+cancel_button=Cancelar
 cannot_start_call_session_not_ready=No se puede iniciar la llamada, la sesión no está lista.
 network_disconnected=La conexión de red terminó abruptamente.
-
 connection_error_see_console_notification=La llamada falló; vea la consola para detalles.
-legal_text_and_links2=Al usar este producto usted acepta los {{terms_of_use}} \
+
+legal_text_and_links3=Al usar {{clientShortname}} usted acepta los {{terms_of_use}} \
   y la {{privacy_notice}}.
 legal_text_tos = Términos de uso
 legal_text_privacy = Política de privacidad
+client_shortname_fallback=este producto
 
 feedback_call_experience_heading=¿Cómo fue la experiencia de su llamada?
 feedback_what_makes_you_sad=¿Qué le entristece?
