added some missing strings, and cleaned a bit

--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -15,8 +15,6 @@ display_name_available_status=Disponible
 
 # Error bars
 unable_retrieve_url=Lo sentimos, no pudimos obtener la url de llamado.
-
-
 session_expired_error_description=Sesión expirada. Todas las URLs que haya creado y compartido previamente  ya no funcionarán.
 could_not_authenticate=No se pudo autentificar
 password_changed_question=¿Cambió su contraseña?
@@ -124,13 +122,5 @@ feedback_custom_category_text_placeholder=¿Qué falló?
 feedback_submit_button=Enviar
 feedback_back_button=Atrás
 feedback_window_will_close_in2=Esta ventana se cerrará en {{countdown}} segundo;Esta ventana se cerrará en {{countdown}} segundos
-
-
-share_email_subject2=Invitación a charlar
-share_email_body2=Por favor, aprieta este enlace para llamarme:\r\n\r\n{{callUrl}}
-
-share_button=Correo
-copy_url_button=Copiar
-copied_url_button=¡Copiado!
-
-panel_footer_signin_or_signup_link=Conectarse o registrarse
+feedback_rejoin_button=Volver a unirse
+feedback_report_user_button=Reportar usuario
