--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -74,7 +74,7 @@ incoming_call_cancel_button=Cancelar
 incoming_call_cancel_and_block_button=Cancelar y bloquear
 incoming_call_block_button=Bloquear
 hangup_button_title=Colgar
-hangup_button_caption=Terminar llamada
+hangup_button_caption2=Salir
 mute_local_audio_button_title=Silenciar su audio
 unmute_local_audio_button_title=Desilenciar su audio
 mute_local_video_button_title=Ocultar su video
@@ -90,7 +90,7 @@ initiate_call_cancel_button=Cancelar
 call_progress_connecting_description=Conectando…
 call_progress_ringing_description=Sonando…
 peer_ended_conversation2=La persona a la que llamaba terminó la conversación.
-call_has_ended= Su llamada ha terminado.
+conversation_has_ended=Su conversación a terminado.
 restart_call=Volver a unirse
 generic_failure_title=Algo se fue a las pailas.
 generic_failure_with_reason2=Puede volver a intentarlo o enviar un enlace para probar más tarde.
@@ -110,7 +110,7 @@ legal_text_tos = Términos de uso
 legal_text_privacy = Política de privacidad
 client_shortname_fallback=este producto
 
-feedback_call_experience_heading=¿Cómo fue la experiencia de su llamada?
+feedback_call_experience_heading2=¿Cómo fue su conversación?
 feedback_what_makes_you_sad=¿Qué le entristece?
 feedback_thank_you_heading=¿Gracias por sus comentarios!
 feedback_category_audio_quality=Calidad del audio
