Update files from Moz33

--- a/hu/browser/chrome/browser/browser.properties
+++ b/hu/browser/chrome/browser/browser.properties
@@ -112,6 +112,17 @@ crashedpluginsMessage.submitButton.label=Hibajelentés küldése
 crashedpluginsMessage.submitButton.accesskey=H
 crashedpluginsMessage.learnMore=További tudnivalók…
 
+# Keyword fixup messages
+# LOCALIZATION NOTE (keywordURIFixup.message): Used when the user tries to visit
+# a local host page, by the time the DNS request recognizes it, we have already
+# loaded a search page for the given word.  An infobar then asks to the user
+# whether he rather wanted to visit the host.  %S is the recognized host.
+keywordURIFixup.message=Ide szeretett volna eljutni: %S?
+keywordURIFixup.goTo=Igen, vigyél ide: %S
+keywordURIFixup.goTo.accesskey=I
+keywordURIFixup.dismiss=Köszönöm, nem
+keywordURIFixup.dismiss.accesskey=N
+
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
 # plugins which are not known to be unsafe. %1$S is the plugin name and %2$S
@@ -291,8 +302,6 @@ identity.mixed_active_loaded2=Ez a weboldal nem titkosított interaktív tartalm
 identity.unencrypted=A kapcsolat ezzel a webhellyel nem titkosított.
 
 identity.unknown.tooltip=Ez a webhely nem szolgáltat magáról azonosító információkat.
-
-identity.ownerUnknown2=(ismeretlen)
 
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
 identity.chrome=Ez egy biztonságos %S oldal.
@@ -486,18 +495,28 @@ identity.loggedIn.description = Bejelentkezve mint: %S
 identity.loggedIn.signOut.label = Kijelentkezés
 identity.loggedIn.signOut.accessKey = K
 
-# LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message, getUserMedia.shareCameraAndMicrophone.message): %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
+#                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
+#                    getUserMedia.shareScreenAndMicrophone.message):
+#  %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.shareCamera.message = Megosztja kameráját a következő webhellyel: %S
+getUserMedia.shareMicrophone.message = Megosztja mikrofonját a következő webhellyel: %S
+getUserMedia.shareScreen.message = Megosztja képernyőjét a következővel: %S?
+getUserMedia.shareCameraAndMicrophone.message = Megosztja kameráját és mikrofonját a következő webhellyel: %S
+getUserMedia.shareScreenAndMicrophone.message = Megosztja kameráját és mikrofonját a következővel: %S?
+getUserMedia.noVideo.label = Nincs videó
+getUserMedia.noWindowOrScreen.label = Egyik ablak vagy képernyő sem
+getUserMedia.noAudio.label = Nincs hang
+getUserMedia.shareEntireScreen.label = Teljes képernyő
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareCamera.message = Megosztja kameráját a következő webhellyel: %S
-getUserMedia.shareMicrophone.message = Megosztja mikrofonját a következő webhellyel: %S
-getUserMedia.shareCameraAndMicrophone.message = Megosztja kameráját és mikrofonját a következő webhellyel: %S
-getUserMedia.noVideo.label = Nincs videó
-getUserMedia.noAudio.label = Nincs hang
 getUserMedia.shareSelectedDevices.label = Kijelölt eszköz megosztása;Kijelölt eszközök megosztása
 getUserMedia.shareSelectedDevices.accesskey = J
+getUserMedia.shareScreen.label = Képernyő megosztása
+getUserMedia.shareWindow.label = Kijelölt ablak megosztása
+getUserMedia.shareSelectedItems.label = Kijelölt elemek megosztása
 getUserMedia.always.label = Mindig megosztható
 getUserMedia.always.accesskey = d
 getUserMedia.denyRequest.label = Titok
@@ -507,6 +526,8 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Megosztja kameráját ezzel az oldallal.
 getUserMedia.sharingMicrophone.message2 = Megosztja mikrofonját ezzel az oldallal.
 getUserMedia.sharingCameraAndMicrophone.message2 = Megosztja kameráját és mikrofonját ezzel az oldallal.
+getUserMedia.sharingScreen.message = Megosztja képernyőjét ezzel az oldallal.
+getUserMedia.sharingWindow.message = Megosztja egy ablakát ezzel az oldallal.
 getUserMedia.continueSharing.label = Megosztás folytatása
 getUserMedia.continueSharing.accesskey = f
 getUserMedia.stopSharing.label = Megosztás befejezése
