[ms] update from Pootle (mobile)

--- a/ms/mobile/android/chrome/browser.properties
+++ b/ms/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Pemasangan
 
 # Alerts
 alertAddonsDownloading=Memuat turun add-on
-alertAddonsInstalledNoRestart=Pemasangan selesai
 alertAddonsFail=Pemasangan gagal
+alertAddonsInstalledNoRestart.message=Pemasangan selesai
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=ADD-ONS
 
 alertDownloadsStart2=Muat turun bermula
 alertDownloadsDone2=Muat turun selesai
@@ -19,6 +23,9 @@ alertDownloadsToast=Muat turun bermula…
 alertDownloadsPause=Jeda
 alertDownloadsResume=Sambung
 alertDownloadsCancel=Batal
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Muat turun telah dilumpuhkan di dalam sessi tamu
 
 alertFullScreenToast=Tekan UNDUR untuk meninggalkan mod skrin-penuh
 
@@ -116,6 +123,35 @@ contacts.ask=Benarkan %S untuk mengakses kenalan anda?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Jangan tanya lagi untuk laman ini
 
+# Device Storage API
+deviceStorageMusic.allow=Benarkan
+deviceStorageMusic.dontAllow=Jangan benarkan
+deviceStorageMusic.ask=Benarkan %S mencapai muzik anda?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Jangan tanya lagi untuk laman ini
+
+deviceStoragePictures.allow=Benarkan
+deviceStoragePictures.dontAllow=Jangan benarkan
+deviceStoragePictures.ask=Benarkan %S mencapai imej anda?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Jangan tanya lagi untuk laman ini
+
+deviceStorageSdcard.allow=Benarkan
+deviceStorageSdcard.dontAllow=Jangan benarkan
+deviceStorageSdcard.ask=Benarkan %S mencapai storan luaran?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Jangan tanya lagi untuk laman ini
+
+deviceStorageVideos.allow=Benarkan
+deviceStorageVideos.dontAllow=Jangan benarkan
+deviceStorageVideos.ask=Benarkan %S mencapai video anda?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Jangan tanya lagi untuk laman ini
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Teks disalin ke clipboard
 
 # Casting
-casting.prompt=Tuang ke Peranti
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Hantar ke Peranti
+casting.mirrorTab=Cermin Tab
+casting.mirrorTabStop=Henti Cermin
 
 # Context menu
 contextmenu.openInNewTab=Buka Pautan dalam Tab Baru
@@ -209,7 +249,9 @@ contextmenu.unmute=Nyah bisu
 contextmenu.saveVideo=Simpan Video
 contextmenu.saveAudio=Simpan Audio
 contextmenu.addToContacts=Tambah ke Kenalan
-contextmenu.castToScreen=Tuang ke Skrin
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Hantar ke Peranti
 
 contextmenu.copy=Salin
 contextmenu.cut=Potong
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Mel
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Pilih suapan
 feedHandler.subscribeWith=Langgan dengan
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S dikecam. Sila gunakan %S sebagai ganti
