--- a/ms/mobile/android/chrome/webapp.properties
+++ b/ms/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 kemas kini gagal;#1 kemas kini gagal
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Gagal untuk mendapatkan semula kemas kini untuk %1$S;Gagal untuk mendapatkan semula kemas kini untuk %1$S
+
+webappsDisabledInGuest=Memasang aplikasi telah dilumpuhkan di dalam sesi tamu
