[ms] update from Pootle (firefox)

--- a/ms/browser/chrome/browser/preferences/preferences.properties
+++ b/ms/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Kuki berikut disimpan pada komputer anda:
 cookiesFiltered=Kuki berikut berpadanan dengan carian anda:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Padam data laman web tertutup
 offlineAppRemovePrompt=Selepas memadam data ini, %S tidak boleh diakses offline.  Adakah anda pasti memadam laman web tertutup ini?
 offlineAppRemoveConfirm=Buang data luar talian
