--- a/ms/dom/chrome/security/csp.properties
+++ b/ms/dom/chrome/security/csp.properties
@@ -65,6 +65,8 @@ scriptFromStringBlocked = Satu percubaan untuk memanggil JavaScript dari string 
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Mentafsir %1$S sebagai nama hos, bukannya kata kunci. Jika anda berhasrat menjadikannya kata kunci, gunakan '%2$S' (dibungkus dengan tanda petikan tunggal).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
 
 # CSP Errors:
 policyURINotAlone = arahan policy-uri hanya boleh muncul bersendirian
