--- a/ms/webapprt/webapprt/webapp.properties
+++ b/ms/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=Pasang %S
 webapps.install.description=Anda mahu untuk memasang %S?
 webapps.install.install=Pasang App
 webapps.install.dontinstall=Dilarang Pasang
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=Bayaran
 paymentDialog.message=Penyedia pembayaran yang mana yang ingin anda gunakan?
