--- a/ms/browser/chrome/browser/browser.properties
+++ b/ms/browser/chrome/browser/browser.properties
@@ -74,7 +74,6 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=Sebuah tema baru sudah dipasang.
 lwthemePostInstallNotification.undoButton=Kembali Asal
-lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Mengurus Tema…
 lwthemePostInstallNotification.manageButton.accesskey=M
 
@@ -97,6 +96,9 @@ popupBlock=Halang pop-up untuk %S
 popupWarningDontShowFromMessage=Jangan pamer mesej ini apabila pop-up telah dihalang
 popupWarningDontShowFromLocationbar=Jangan pamer bar info apabila pop-up telah dihalang
 popupShowPopupPrefix=Pamer '%S'
+
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
 
 # missing plugin installer
 installPlugin.message = Adakah anda mahu memasang plugin tambahan yang diperlukan untuk memaparkan media di halaman ini?
@@ -444,6 +446,7 @@ webapps.install.accesskey = I
 webapps.requestInstall = Anda mahu untuk memasang "%1$S" daripada laman ini (%2$S)?
 webapps.install.success = Aplikasi dipasang
 webapps.install.inprogress = Pemasangan sedang dijalankan
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S kini skrin penuh.
@@ -505,9 +508,13 @@ getUserMedia.shareScreen.message = Mahukah anda berkongsi kamera anda dengan %S?
 getUserMedia.shareCameraAndMicrophone.message = Adakah anda mahu berkongsi kamera dan mikfrofon dengan %S?
 getUserMedia.shareScreenAndMicrophone.message = Mahukah anda berkongsi mikrofon dan skrin anda dengan %S?
 getUserMedia.noVideo.label = Tiada Video
-getUserMedia.noWindowOrScreen.label = Tiada Tetingkap atau Skrin
 getUserMedia.noAudio.label = Tiada Audio
 getUserMedia.shareEntireScreen.label = Keseluruhan skrin
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -533,13 +540,19 @@ getUserMedia.continueSharing.accesskey = T
 getUserMedia.stopSharing.label = Hentikan Perkongsian
 getUserMedia.stopSharing.accesskey = H
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S telah menghalang kandungan yang tidak selamat.
-mixedContentBlocked.keepBlockingButton.label = Teruskan Menghalang
-mixedContentBlocked.keepBlockingButton.accesskey = M
-mixedContentBlocked.unblock.label = Lumpuhkan perlindungan pada halaman ini
-mixedContentBlocked.unblock.accesskey = L
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S seperti lambat… untuk… dimulakan.
