--- a/ms/browser/chrome/browser/devtools/toolbox.properties
+++ b/ms/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=Alatan Pembangun
 # for the options panel tab.
 optionsButton.tooltip=Pilihan Kekotak Alatan
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Opsyen
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=Panel Pilihan Kekotak Alatan
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Petik elemen daripada laman
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Tema gelap
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Tema cerah
