--- a/ms/browser/chrome/browser/shellservice.properties
+++ b/ms/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=&Pilihan %S
 safeModeLabel=%S &Mod Selamat
-setDefaultBrowserTitle=Browser Utama
-setDefaultBrowserMessage=%S bukan pelayar utama anda. Adakah anda ingin menjadikan pelayar ini sebagai pelayar utama?
-setDefaultBrowserDontAsk=Sentiasa menjalankan pemeriksaan ini apabila memulakan %S.
-alreadyDefaultBrowser=%S adalah pelayar utama anda.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = Opsyen
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNever.label       = Jangan tanya saya lagi
+setDefaultBrowserNever.accesskey   = J
+
+
 desktopBackgroundLeafNameWin=Paparan Dinding.bmp
 DesktopBackgroundDownloading=Simpan Gambar…
 DesktopBackgroundSet=Set Paparan Dinding
