--- a/ms/browser/chrome/browser/webrtcIndicator.properties
+++ b/ms/browser/chrome/browser/webrtcIndicator.properties
@@ -26,11 +26,24 @@ webrtcIndicator.sharingMicrophoneWith.menuitem = Berkongsi Mikrofon dengan "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Berkongsi Skrin dengan "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Berkongsi Tetingkap dengan "%S"
 webrtcIndicator.controlSharing.menuitem = Kawalan Perkongsian
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Berkongsi Kamera dengan tab #1;Berkongsi Kamera dengan tab #1
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Berkongsi Microfon dengan tab #1;Berkongsi Microfon dengan tab #1
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Berkongsi Skrin dengan tab #1;Berkongsi Skrin dengan tab #1
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Berkongsi Tetingkap dengan tab #1;Berkongsi Tetingkap dengan tab #1
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
