--- a/ms/dom/chrome/accessibility/AccessFu.properties
+++ b/ms/dom/chrome/accessibility/AccessFu.properties
@@ -7,72 +7,12 @@ screenReaderStarted = Pembaca skrin bermula
 screenReaderStopped = Pembaca skrin berhenti
 
 # Roles
-menubar        =       bar menu
-scrollbar      =       bar skrol
-grip           =       genggaman
-alert          =       amaran
-menupopup      =       paparan menu
-document       =       dokumen
-pane           =       tetingkap
-dialog         =       dialog
-separator      =       pemisah
-toolbar        =       bar alatan
-statusbar      =       bar status
 table          =       jadual
-columnheader   =       pengepala lajur
-rowheader      =       baris pengatas
-column         =       lajur
-row            =       barisan
-cell           =       sel
 link           =       pautan
-list           =       senarai
-listitem       =       senarai
-outline        =       garisan luar
-outlineitem    =       butiran garis
-pagetab        =       tab
-propertypage   =       sifat halaman
-graphic        =       grafik
 pushbutton     =       butang
-checkbutton    =       butang periksa
-radiobutton    =       butang radio
-combobox       =       kotak kombo
-progressbar    =       bar kemajuan
-slider         =       gelangsar
-spinbutton     =       butang berputar
-diagram        =       gambarajah
-animation      =       animasi
-equation       =       persamaan
-buttonmenu     =       butang menu
-whitespace     =       ruang kosong
-pagetablist    =       senarai tab
-canvas         =       kanvas
-checkmenuitem  =       periksa senarai menu
-label          =       label
 passwordtext   =       teks kata laluan
-radiomenuitem  =       senarai menu radio
-textcontainer  =       bekas teks
-togglebutton   =       butang togol
-treetable      =       jadual pokok
-header         =       tajuk
-footer         =       pengaki
-paragraph      =       perenggan
-entry          =       kemasukan
-caption        =       tajuk
-heading        =       tajuk
-section        =       seksyen
-form           =       borang
-comboboxlist   =       senarai kotak kombo
-comboboxoption =       pilihan kombo kotak
 imagemap       =       peta imej
-listboxoption  =       pilihan
-listbox        =       kotak senarai
-flatequation   =       persamaan rata
-gridcell       =       sel petak
-note           =       nota
 figure         =       rajah
-definitionlist =       senarai definisi
-term           =       jangka
-definition     =       definisi
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       ruang teks
@@ -94,11 +34,9 @@ listEnd        =       Item terakhir
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 bahan;#1 bahan
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S's %2$S pada %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +46,12 @@ main           =       utama
 navigation     =       navigasi
 search         =       carian
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S dengan %S dan %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 kolum;#1 kolum
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 baris;#1 baris
 
 # table or grid cell information
 columnInfo = Kolum %S
@@ -190,18 +123,21 @@ quicknav_Table       = Jadual
 quicknav_Checkbox    = Kekotak semak
 
 # Shortened role names for braille
+tableAbbr          =       tbl
 linkAbbr           =       Dakwat
 pushbuttonAbbr     =       btn
 passwordtextAbbr   =       passwdtxt
 imagemapAbbr       =       imgmap
 figureAbbr         =       fig
 textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
