[ta] update from Pootle (firefox)

--- a/ta/dom/chrome/security/csp.properties
+++ b/ta/dom/chrome/security/csp.properties
@@ -67,6 +67,7 @@ scriptFromStringBlocked = ஒரு சரத்திலிருந்து (
 hostNameMightBeKeyword = %1$S ஐ புரவலன் பெயராக எடுத்துக்கொள்ளப்படும் முக்கிய சொல்லாக அல்ல. முக்கிய சொல் வேண்டும் எனில் '%2$S' ஐ பயன்படுத்தவும் (மேற்கோள் குறிகளுக்கிடையில் உள்ளதுபோல்).
 # LOCALIZATION NOTE (notSupportingDirective):
 # directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = '%1$S' ஆதரிப்பதில்லை. அதுவும் அதன் மதிப்புகளும் தவிர்க்கப்படும்.
 
 # CSP Errors:
 policyURINotAlone = policy-uri அறிவுறுத்தல் தனியாக மட்டுமே இடம்பெறலாம்
