--- a/ta/toolkit/chrome/global/aboutSupport.properties
+++ b/ta/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ClearType அளவுருக்கள் கா
 adapterDescription = அடாப்டர் விவரம்
 adapterVendorID = விற்பனையாளர் ID
 adapterDeviceID = சாதன ID
+adapterSubsysID = துணைக்கட்டக ID
 adapterDrivers = அடாப்டர் இயக்கிகள்
 adapterRAM = அடாப்டர் RAM
 driverVersion = இயக்கி பதிப்பு
@@ -71,6 +72,7 @@ driverDate = இயக்கி தேதி
 adapterDescription2 = அடாப்டர் விளக்கம் (GPU #2)\u0020
 adapterVendorID2 = விற்பனையாளரின் அடையாளயெண்(ஜிபியூ #2)\u0020
 adapterDeviceID2 = சாதனத்தின் குறியீடு
+adapterSubsysID2 = துணைக்கட்டக ID (GPU #2)
 adapterDrivers2 = தகவி இயக்கிகள் (GPU #2)
 adapterRAM2 = தகவியின் ரேம் (GPU #2)
 driverVersion2 = இயக்கியின் பதிப்பு
