--- a/ta/toolkit/chrome/global/autocomplete.properties
+++ b/ta/toolkit/chrome/global/autocomplete.properties
@@ -5,4 +5,5 @@
 # LOCALIZATION NOTE (searchWithEngine): %S will be replaced with
 # the search engine provider's name. This format was chosen because
 # the provider can also end with "Search" (e.g.: MSN Search).
+searchWithEngine = %S மூலம் தேடவும்
 switchToTab = தத்தலுக்கு மாறு
