[th] update from Pootle (firefox)

--- a/th/browser/chrome/browser/preferences/preferences.properties
+++ b/th/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=คุกกี้เหล่านี้เก็บอยู่ใ
 cookiesFiltered=คุกกี้เหล่านี้ตรงกับคำค้นที่ป้อน :
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=ลบข้อมูลเว็บไซต์ออฟไลน์
 offlineAppRemovePrompt=หลังจากลบข้อมูลนี้แล้ว %S จะไม่สามารถเรียกดูแบบออฟไลน์ได้ คุณแน่ใจหรือไม่ที่จะลบเว็บไซต์ออฟไลน์นี้
 offlineAppRemoveConfirm=ลบข้อมูลออฟไลน์
