--- a/th/dom/chrome/security/csp.properties
+++ b/th/dom/chrome/security/csp.properties
@@ -54,6 +54,8 @@ allowDirectiveIsDeprecated = allow คำสั่งได้ถูกคัด
 # eval is a name and should not be localized.
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
 
 # CSP Errors:
 policyURINotAlone = คำสั่ง policy-uri ต้องอยู่เดี่ยวๆ เท่านั้น
