--- a/th/webapprt/webapprt/webapp.properties
+++ b/th/webapprt/webapprt/webapp.properties
@@ -34,4 +34,8 @@ webapps.install.title=ติดตั้ง %S
 webapps.install.description=คุณต้องการติดตั้ง %S หรือไม่?
 webapps.install.install=ติดตั้งแอป
 webapps.install.dontinstall=ไม่ติดตั้ง
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
