--- a/th/browser/chrome/browser/shellservice.properties
+++ b/th/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=%S &ตัวเลือก
 safeModeLabel=%S โหมด&ปลอดภัย
-setDefaultBrowserTitle=เบราเซอร์ปริยาย
-setDefaultBrowserMessage=ปัจจุบัน %S ไม่ใช่เบราเซอร์ปริยาย คุณต้องการให้โปรแกรมนี้เป็นเบราเซอร์ปริยายหรือไม่
-setDefaultBrowserDontAsk=ตรวจสอบเช่นนี้เสมอเมื่อเริ่ม %S
-alreadyDefaultBrowser=%S เป็นเบราเซอร์ปริยายอยู่แล้ว
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = ตัวเลือก
+setDefaultBrowserOptions.accesskey = ล
+setDefaultBrowserNever.label       = ไม่ต้องถามฉันอีก
+setDefaultBrowserNever.accesskey   = ม
+
+
 desktopBackgroundLeafNameWin=ภาพพื้นหลังของพื้นโต๊ะ.bmp
 DesktopBackgroundDownloading=บันทึกรูป…
 DesktopBackgroundSet=ตั้งภาพพื้นหลังของพื้นโต๊ะ
