--- a/uk/browser/installer/nsisstrings.properties
+++ b/uk/browser/installer/nsisstrings.properties
@@ -20,7 +20,7 @@
 
 WIN_CAPTION=Встановлення $BrandShortName
 
-INTRO_BLURB1=Дякуємо, що обрали $BrandFullName, браузер, який ставить вас понад усе.
+INTRO_BLURB1=Дякуємо, що обрали $BrandFullName - браузер, який ставить вас понад усе.
 INSTALL_BLURB1=До ваших послуг його швидкість, гнучкість та безпека. Також ви можете підлаштувати його під свої смаки та потреби.
 INSTALL_BLURB2=Це все тому, що $BrandShortName створений некомерційною організацією, яка працює над тим, щоб зробити перегляд мережі (та й її саму) краще.
 INSTALL_BLURB3=Ви також приєднуєтесь до спільноти користувачів, помічників та розробників, які створюють найкращий браузер у світі.
