--- a/uk/browser/installer/custom.properties
+++ b/uk/browser/installer/custom.properties
@@ -31,7 +31,7 @@ OPTIONAL_COMPONENTS_DESC=Служба оновлення дозволить ва
 MAINTENANCE_SERVICE_CHECKBOX_DESC=Встановити Службу &Оновлення
 SUMMARY_PAGE_TITLE=Підсумок
 SUMMARY_PAGE_SUBTITLE=Все готово до початку встановлення $BrandShortName
-SUMMARY_INSTALLED_TO=$BrandShortName буде встановлено у наступне місце:
+SUMMARY_INSTALLED_TO=$BrandShortName буде встановлено у наступне розташування:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Для завершення встановлення можливо знадобиться перезавантажити комп’ютер.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=Для завершення вилучення можливо знадобиться перезавантажити комп’ютер.
 SUMMARY_TAKE_DEFAULTS=Ви&користовувати $BrandShortName як мій типовий браузер
@@ -68,13 +68,13 @@ STATUS_CLEANUP=Триває прибирання…
 
 # _DESC strings support approximately 65 characters per line.
 # One line
-OPTIONS_SUMMARY=Виберіть потрібний тип установки та клацніть «Далі».
+OPTIONS_SUMMARY=Виберіть потрібний тип встановлення та клацніть «Далі».
 # One line
 OPTION_STANDARD_DESC=$BrandShortName буде встановлено в типовій комплектації
-OPTION_STANDARD_RADIO=&Типова
+OPTION_STANDARD_RADIO=&Типово
 # Two lines
-OPTION_CUSTOM_DESC=Ви можете самостійно вибрати компоненти для встановлення. Рекомендовано досвідченим користувачам.
-OPTION_CUSTOM_RADIO=&Вибіркова
+OPTION_CUSTOM_DESC=Ви можете вибрати компоненти для встановлення. Рекомендовано досвідченим користувачам.
+OPTION_CUSTOM_RADIO=&Вибірково
 
 # LOCALIZATION NOTE:
 # The following text replaces the Install button text on the summary page.
